ggz-client-libs/ggzcore/ggzcore.h


typedef struct _GGZServer   GGZServer;
typedef struct _GGZRoom     GGZRoom;
typedef struct _GGZPlayer   GGZPlayer;
typedef struct _GGZTable    GGZTable;
typedef struct _GGZGameType GGZGameType;
typedef struct _GGZGame     GGZGame;
typedef GGZHookReturn (*GGZHookFunc)(unsigned int id, 
				     const void* event_data, 
				     const void* user_data);
typedef enum {
	GGZ_LOGIN,
	GGZ_LOGIN_GUEST,
	GGZ_LOGIN_NEW
} GGZLoginType;
typedef enum {
	GGZ_CONNECTED,
	GGZ_CONNECT_FAIL,
	GGZ_NEGOTIATED,
	GGZ_NEGOTIATE_FAIL,
	GGZ_LOGGED_IN,
	GGZ_LOGIN_FAIL,
	GGZ_MOTD_LOADED,
	GGZ_ROOM_LIST,
	GGZ_TYPE_LIST,
	GGZ_SERVER_PLAYERS_CHANGED,
	GGZ_ENTERED,
	GGZ_ENTER_FAIL,
	GGZ_LOGOUT,
	GGZ_NET_ERROR,
	GGZ_PROTOCOL_ERROR,
	GGZ_CHAT_FAIL,
	GGZ_STATE_CHANGE,
	GGZ_CHANNEL_CONNECTED,
	GGZ_CHANNEL_READY,
	GGZ_CHANNEL_FAIL,
	GGZ_SERVER_ROOMS_CHANGED,
	GGZ_NUM_SERVER_EVENTS
} GGZServerEvent;
typedef enum {
	GGZ_PLAYER_LIST,
	GGZ_TABLE_LIST,
	GGZ_CHAT_EVENT,
	GGZ_ROOM_ENTER,
	GGZ_ROOM_LEAVE,
	GGZ_TABLE_UPDATE,
	GGZ_TABLE_LAUNCHED,
	GGZ_TABLE_LAUNCH_FAIL,
	GGZ_TABLE_JOINED,
	GGZ_TABLE_JOIN_FAIL,
	GGZ_TABLE_LEFT,
	GGZ_TABLE_LEAVE_FAIL,
	GGZ_PLAYER_LAG,
	GGZ_PLAYER_STATS,
	GGZ_PLAYER_COUNT,
	GGZ_PLAYER_PERMS
} GGZRoomEvent;
typedef enum {
	GGZ_STATE_OFFLINE, 
	GGZ_STATE_CONNECTING, 
	GGZ_STATE_RECONNECTING, 
	GGZ_STATE_ONLINE, 
	GGZ_STATE_LOGGING_IN, 
	GGZ_STATE_LOGGED_IN, 
	GGZ_STATE_ENTERING_ROOM,  
	GGZ_STATE_IN_ROOM, 
	GGZ_STATE_BETWEEN_ROOMS, 
	GGZ_STATE_LAUNCHING_TABLE, 
	GGZ_STATE_JOINING_TABLE, 
	GGZ_STATE_AT_TABLE, 
	GGZ_STATE_LEAVING_TABLE, 
	GGZ_STATE_LOGGING_OUT 
} GGZStateID;
GGZServer* ggzcore_server_new(void);
int ggzcore_server_reset(GGZServer *server);
int ggzcore_server_add_event_hook_full(GGZServer *server,
				       const GGZServerEvent event, 
				       const GGZHookFunc func,
				       const void *data);
int ggzcore_server_remove_event_hook_id(GGZServer *server,
					const GGZServerEvent event, 
					const unsigned int hook_id);
int ggzcore_server_set_hostinfo(GGZServer *server,
				const char *host,
				const unsigned int port,
				const unsigned int use_tls);
int ggzcore_server_set_logininfo(GGZServer *server,
				 const GGZLoginType type,
				 const char *handle,
				 const char *password,
				 const char *email);
int ggzcore_server_log_session(GGZServer *server, const char *filename);
const char* ggzcore_server_get_host(const GGZServer *server);
int ggzcore_server_get_port(const GGZServer *server);
GGZLoginType ggzcore_server_get_type(const GGZServer *server);
const char* ggzcore_server_get_handle(const GGZServer *server);
const char* ggzcore_server_get_password(const GGZServer *server);
int ggzcore_server_get_fd(const GGZServer *server);
int ggzcore_server_get_channel(const GGZServer *server);
GGZStateID ggzcore_server_get_state(const GGZServer *server);
int ggzcore_server_get_tls(const GGZServer *server);
int ggzcore_server_get_num_rooms(const GGZServer *server);
GGZRoom* ggzcore_server_get_nth_room(const GGZServer *server, 
				     const unsigned int num);
GGZRoom* ggzcore_server_get_cur_room(const GGZServer *server);
int ggzcore_server_get_num_gametypes(const GGZServer *server);
GGZGameType* ggzcore_server_get_nth_gametype(const GGZServer *server, 
					     const unsigned int num);
GGZGame* ggzcore_server_get_cur_game(const GGZServer *server);
int ggzcore_server_is_online(const GGZServer *server);
int ggzcore_server_is_logged_in(const GGZServer *server);
int ggzcore_server_is_in_room(const GGZServer *server);
int ggzcore_server_is_at_table(const GGZServer *server);
int ggzcore_server_connect(GGZServer *server);
int ggzcore_server_create_channel(GGZServer *server);
int ggzcore_server_login(GGZServer *server);
int ggzcore_server_motd(GGZServer *server);
int ggzcore_server_list_rooms(GGZServer *server, const char verbose);
int ggzcore_server_list_gametypes(GGZServer *server, const char verbose);
int ggzcore_server_join_room(GGZServer *server, GGZRoom *room);
int ggzcore_server_logout(GGZServer *server);
int ggzcore_server_disconnect(GGZServer *server);
int ggzcore_server_data_is_pending(GGZServer *server);
int ggzcore_server_read_data(GGZServer *server, int fd);
void ggzcore_server_free(GGZServer *server);
GGZRoom* ggzcore_room_new(void);
void ggzcore_room_free(GGZRoom *room);
const char* ggzcore_room_get_name(const GGZRoom *room);
const char* ggzcore_room_get_desc(const GGZRoom *room);
GGZGameType* ggzcore_room_get_gametype(const GGZRoom *room);
int ggzcore_room_get_num_players(const GGZRoom *room);
GGZPlayer* ggzcore_room_get_nth_player(const GGZRoom *room,
				       const unsigned int num);
int ggzcore_room_get_num_tables(const GGZRoom *room);
GGZTable* ggzcore_room_get_nth_table(const GGZRoom *room,
				     const unsigned int num);
GGZTable* ggzcore_room_get_table_by_id(const GGZRoom *room,
				       const unsigned int id);
int ggzcore_room_add_event_hook_full(GGZRoom *room,
				     const GGZRoomEvent event, 
				     const GGZHookFunc func,
				     const void *data);
int ggzcore_room_remove_event_hook_id(GGZRoom *room,
				      const GGZRoomEvent event, 
				      const unsigned int hook_id);
int ggzcore_room_list_players(GGZRoom *room);
int ggzcore_room_list_tables(GGZRoom *room);
int ggzcore_room_chat(GGZRoom *room,
		      const GGZChatType opcode,
		      const char *player,
		      const char *msg);
int ggzcore_room_launch_table(GGZRoom *room, GGZTable *table);
int ggzcore_room_join_table(GGZRoom *room, const unsigned int table_id, 
			    int spectator);
int ggzcore_room_leave_table(GGZRoom *room, int force);
char *ggzcore_player_get_name(const GGZPlayer *player);
GGZPlayerType ggzcore_player_get_type(const GGZPlayer *player);
GGZTable* ggzcore_player_get_table(const GGZPlayer *player);
int ggzcore_player_get_lag(const GGZPlayer *player);
int ggzcore_player_get_record(const GGZPlayer *player,
			      int *wins, int *losses,
			      int *ties, int *forfeits);
int ggzcore_player_get_rating(const GGZPlayer *player, int *rating);
int ggzcore_player_get_ranking(const GGZPlayer *player, int *ranking);
int ggzcore_player_get_highscore(const GGZPlayer *player, int *highscore);
GGZTable* ggzcore_table_new(void);
int ggzcore_table_init(GGZTable *table,
		       const GGZGameType *gametype,
		       const char *desc,
		       const unsigned int num_seats);
void ggzcore_table_free(GGZTable *table);
int ggzcore_table_set_seat(GGZTable *table,
			   const unsigned int seat,
			   GGZSeatType type,
			   const char *name);
int ggzcore_table_remove_player(GGZTable *table, const char *name);
int ggzcore_table_get_id(const GGZTable *table);
const GGZGameType *ggzcore_table_get_type(const GGZTable *table);
const char *ggzcore_table_get_desc(const GGZTable *table);
GGZTableState ggzcore_table_get_state(const GGZTable *table);
int ggzcore_table_get_num_seats(const GGZTable *table);
int ggzcore_table_set_desc(GGZTable *table, const char *desc);
int ggzcore_table_get_seat_count(const GGZTable *table, GGZSeatType type);
const char *ggzcore_table_get_nth_player_name(const GGZTable *table,
					      unsigned int num);
int ggzcore_table_get_num_spectator_seats(const GGZTable *table);
const char *ggzcore_table_get_nth_spectator_name(const GGZTable *table,
						 unsigned int num);
GGZSeatType ggzcore_table_get_nth_player_type(const GGZTable *table, 
					      unsigned int num);