playground/ggz-python/generated-pyrex/pyggzcore.pyx


cdef class Server:
    cdef GGZServer* _server
    def __new__(self, *unused, **unused_kw):
        # We are only called once here.
        self._server = NULL
        self._server = ggzcore_server_new()
    def __init__(self, *unused, **unused_kw):
        self._callbacks = {}
    def __dealloc__(self):
        if self._server:
            ggzcore_server_free(self._server)
    def free(self):
        if self._server:
            ggzcore_server_free(self._server)
    def reset(self):
        return ggzcore_server_reset(self._server)
    def add_event_hook(self, event, callback, data=None):
        '''Handle reference counts?'''
        calldata = (callback, data)
        id = ggzcore_server_add_event_hook_full(self._server, event, 
                hookfunc_wrapper, <void*>calldata)
        self._callbacks[id] = callback # Save a reference for callback
        return id
    def remove_event_hook(self, event, hook):
        # We cannot distinguish functions. :(
        if isinstance(hook, int):
            retval = ggzcore_server_remove_event_hook_id(self._server, event, hook)
            if hook in self._callbacks:
                del self._callbacks[hook]
        return retval
    def set_hostinfo(self, host, port, use_tls):
        return ggzcore_server_set_hostinfo(self._server, host, port, use_tls)
    def set_logininfo(self, type, handle, password):
        return ggzcore_server_set_logininfo(self._server, type, handle, password)
    def log_session(self, filename):
        return ggzcore_server_log_session(self._server, filename)
    def get_host(self):
        return ggzcore_server_get_host(self._server)
    def get_port(self):
        return ggzcore_server_get_port(self._server)
    def get_type(self):
        return ggzcore_server_get_type(self._server)
    def get_handle(self):
        return ggzcore_server_get_handle(self._server)
    def get_password(self):
        return ggzcore_server_get_password(self._server)
    def get_fd(self):
        return ggzcore_server_get_fd(self._server)
    def get_channel(self):
        return ggzcore_server_get_channel(self._server)
    def get_stat(self):
        return ggzcore_server_get_state(self._server)
    def get_tls(self):
        return ggzcore_server_get_tls(self._server)
    def get_num_rooms(self):
        return ggzcore_server_get_num_rooms(self._server)
    def get_cur_room(self):
        cdef GGZRoom *aroom
        cdef Room pyroom
        aroom = ggzcore_server_get_cur_room(self._server)
        pyroom = Room(None)
        pyroom.set_room(aroom)
        return pyroom
    def get_nth_room(self, num):
        cdef GGZRoom *aroom
        cdef Room pyroom
        aroom = ggzcore_server_get_nth_room(self._server, num)
        pyroom = Room(None)
        pyroom.set_room(aroom)
        return pyroom
    def get_num_gametypes(self):
        return ggzcore_server_get_num_gametypes(self._server)
    def get_nth_gametype(self):
        cdef GGZGameType *atype
        cdef GameType pygtype
        atype = ggzcore_server_get_nth_gametype(self._server, num)
        pygtype = GameType()
        pygtype.set_type(atype)
        return pygtype
    def get_cur_game(self):
        cdef GGZGame *agame
        cdef Game pygame
        agame = ggzcore_server_get_cur_game(self._server)
        pygame = Game(None)
        pygame.set_game(agame)
        return pygame
    def is_online(self):
        return ggzcore_server_is_online(self._server)
    def is_logged_in(self):
        return ggzcore_server_is_logged_in(self._server)
    def is_in_room(self):
        return ggzcore_server_is_in_room(self._server)
    def is_at_table(self):
        return ggzcore_server_is_at_table(self._server)
    def connect(self):
        return ggzcore_server_connect(self._server)
    def create_channel(self):
        return ggzcore_server_create_channel(self._server)
    def login(self):
        return ggzcore_server_login(self._server)
    def motd(self):
        return ggzcore_server_motd(self._server)
    def list_rooms(self, type, verbose):
        return ggzcore_server_list_rooms(self._server, type, verbose)
    def list_gametypes(self, verbose):
        return ggzcore_server_list_gametypes(self._server, verbose)
    def join_room(self, room):
        return ggzcore_server_join_room(self._server, room)
    def logout(self):
        return ggzcore_server_logout(self._server)
    def disconnect(self):
        return ggzcore_server_disconnect(self._server)
    def data_is_pending(self):
        return ggzcore_server_data_is_pending(self._server)
    def read_data(self, fd):
        return ggzcore_server_read_data(self._server, fd)

cdef class Room:
    cdef GGZRoom* _room
    def __new__(self, Server server, id=None, 
            name=None, game=None, desc=None):
        self._room = NULL
        if server:
            self._room = ggzcore_room_new()
            ggzcore_room_init(self._room, server._server, id, name, game, desc);
    def __init__(self, *unused, **unused_kw):
        self._callbacks = {}
    def __dealloc__(self):
        if self._room:
            ggzcore_room_free(self._room)

    def free(self):
        if self._room:
            ggzcore_room_free(self._room)

    cdef void set_room(self, GGZRoom* aroom):
        self.free()
        self._room = aroom

    def get_name(self):
        return ggzcore_room_get_name(self._room)
    def get_desc(self):
        return ggzcore_room_get_desc(self._room)
    def get_gametype(self):
        cdef GGZGameType *atype
        cdef GameType pygtype
        atype = ggzcore_room_get_gametype(self._room)
        pygtype = GameType()
        pygtype.set_type(atype)
        return pygtype
    def get_num_players(self):
        return ggzcore_room_get_num_players(self._room)
    def get_nth_player(self, num):
        cdef GGZPlayer *aplayer
        cdef Player pyplayer
        aplayer = ggzcore_room_get_nth_player(self._room, num)
        pyplayer = Player()
        pyplayer.set_player(aplayer)
        return pyplayer
    def get_num_tables(self):
        return ggzcore_room_get_num_tables(self._room)
    def get_nth_table(self, num):
        cdef GGZTable *atable
        cdef Table pytable
        atable = ggzcore_room_get_nth_table(self._room, num)
        pytable = Table(None)
        pytable.set_table(atable)
        return pytable
    def get_table_by_id(self, id):
        cdef GGZTable *atable
        cdef Table pytable
        atable = ggzcore_room_get_table_by_id(self._room, id)
        pytable = Table(None)
        pytable.set_table(atable)
        return pytable

    def add_event_hook(self, event, callback, data=None):
        '''Handle reference counts?'''
        calldata = (callback, data)
        id = ggzcore_room_add_event_hook_full(self._room, event, 
                hookfunc_wrapper, <void*>calldata)
        self._callbacks[id] = callback # Save a reference for callback
        return id
    def remove_event_hook(self, event, hook):
        # We cannot distinguish functions. :(
        if isinstance(hook, int):
            retval = ggzcore_room_remove_event_hook_id(self._room, event, hook)
            if hook in self._callbacks:
                del self._callbacks[hook]
        return retval
    def list_players(self):
        return ggzcore_room_list_players(self._room)
    def list_tables(self, type, cglobal):
        return ggzcore_room_list_tables(self._room, type, cglobal)
    def chat(self, opcode, player, msg):
        return ggzcore_room_chat(self._room, opcode, player, msg)
    def launch_table(self, Table table):
        cdef GGZTable *atable
        atable = table._table
        return ggzcore_room_launch_table(self._room, atable)
    def join_table(self, table_id, spectator):
        return ggzcore_room_join_table(self._room, table_id, spectator)
    def leave_table(self, force):
        return ggzcore_room_leave_table(self._room, force)

cdef class Player:
    cdef GGZPlayer *_player
    def __init__(self):
        self._player = NULL
    cdef void set_player(self, GGZPlayer *aplayer):
        self._player = aplayer
    def get_name(self):
        return ggzcore_player_get_name(self._player)
    def get_type(self):
        return ggzcore_player_get_type(self._player)
    def get_table(self):
        cdef GGZTable *atable
        cdef Table pytable
        atable = ggzcore_player_get_table(self._player)
        pytable = Table(None)
        pytable.set_table(atable)
        return pytable
    def get_lag(self):
        return ggzcore_player_get_lag(self._player)
    def get_record(self):
        cdef int wins, loses, ties, forfeits, retval
        retval =  ggzcore_player_get_record(self._player, &wins, &loses, &ties, 
                &forfeits)
        if retval:
            return wins, loses, ties, forfeits
        else:
            return retval
    def get_rating(self):
        cdef int rating, retval
        retval = ggzcore_player_get_rating(self._player, &rating)
        if retval:
            return rating
        else:
            return retval
    def get_ranking(self):
        cdef int ranking, retval
        retval = ggzcore_player_get_ranking(self._player, &ranking)
        if retval:
            return ranking
        else:
            return retval
    def get_highscore(self):
        cdef long highscore
        cdef int retval
        retval = ggzcore_player_get_highscore(self._player, &highscore)
        if retval:
            return highscore
        else:
            return retval

cdef class Table:
    cdef GGZTable *_table
    def __new__(self, GameType gametype, desc=None, num_seats=None):
        self._table = NULL
        if gametype:
            self._table = ggzcore_table_new()
            ggzcore_table_init(self._table, gametype._type, desc, num_seats)
    def __init__(self, *unused, **unused_kw):
        pass
    def __dealloc__(self):
        if self._table:
            ggzcore_table_free(self._table)
    def free(self):
        if self._table:
            ggzcore_table_free(self._table)
    cdef void set_table(self, GGZTable *atable):
        if self._table != NULL:
            self.free()
        self._table = atable
    def set_seat(self, seat, type, name):
        return ggzcore_table_set_seat(self._table, seat, type, name)
    def remove_player(self, name):
        return ggzcore_table_remove_player(self._table, name)
    def get_id(self):
        return ggzcore_table_get_id(self._table)
    def get_type(self):
        cdef GGZGameType *atype
        cdef GameType pygtype
        atype = ggzcore_table_get_type(self._table)
        pygtype = GameType()
        pygtype.set_type(atype)
        return pygtype
    def get_desc(self):
        return ggzcore_table_get_desc(self._table)
    def get_state(self):
        return ggzcore_table_get_state(self._table)
    def get_num_seats(self):
        return ggzcore_table_get_num_seats(self._table)
    def set_desc(self, desc):
        return ggzcore_table_set_desc(self._table, desc)
    def get_seat_count(self, type):
        return ggzcore_table_get_seat_count(self._table, type)
    def get_nth_player_name(self, num):
        return ggzcore_table_get_nth_player_name(self._table, num)
    def get_num_spectator_seats(self):
        return ggzcore_table_get_num_spectator_seats(self._table)
    def get_nth_spectator_name(self, num):
        return ggzcore_table_get_nth_spectator_name(self._table, num)
    def get_nth_player_type(self, num):
        return ggzcore_table_get_nth_player_type(self._table, num)
